cmake_minimum_required(VERSION 3.17)
include_guard(GLOBAL)

add_library(IGraphics INTERFACE)

target_sources(IGraphics
	INTERFACE
		"Controls/IBubbleControl.h"
		"Controls/IColorPickerControl.h"
		"Controls/IControls.cpp"
		"Controls/IControls.h"
		"Controls/ICornerResizerControl.h"
		"Controls/IFPSDisplayControl.h"
		"Controls/ILEDControl.h"
		"Controls/IPopupMenuControl.cpp"
		"Controls/IPopupMenuControl.h"
		"Controls/IRTTextControl.h"
		"Controls/IShaderControl.h"
		"Controls/ITextEntryControl.cpp"
		"Controls/ITextEntryControl.h"
		"Controls/IVDisplayControl.h"
		"Controls/IVKeyboardControl.h"
		"Controls/IVMeterControl.h"
		"Controls/IVMultiSliderControl.h"
		"Controls/IVNumberBoxControl.h"
		"Controls/IVPresetManagerControl.h"
		"Controls/IVScopeControl.h"
		"Controls/IWebViewControl.h"
		"Controls/Test/Skia/ISkLottieControl.h"
		"Controls/Test/Skia/ISkParagraphControl.h"
		"Controls/Test/Skia/ISkShaderControl.h"
		"Controls/Test/TestAnimationControl.h"
		"Controls/Test/TestArcControl.h"
		"Controls/Test/TestBezierControl.h"
		"Controls/Test/TestBlendControl.h"
		"Controls/Test/TestColorControl.h"
		"Controls/Test/TestControls.h"
		"Controls/Test/TestCursorControl.h"
		"Controls/Test/TestDirBrowseControl.h"
		"Controls/Test/TestDrawContextControl.h"
		"Controls/Test/TestDropShadowControl.h"
		"Controls/Test/TestFlexBoxControl.h"
		"Controls/Test/TestFontControl.h"
		"Controls/Test/TestGesturesControl.h"
		"Controls/Test/TestGFXLabel.h"
		"Controls/Test/TestGLControl.h"
		"Controls/Test/TestGradientControl.h"
		"Controls/Test/TestImageControl.h"
		"Controls/Test/TestKeyboardControl.h"
		"Controls/Test/TestLayerControl.h"
		"Controls/Test/TestMaskControl.h"
		"Controls/Test/TestMPSControl.h"
        "Controls/Test/TestMPSControl.mm"
		"Controls/Test/TestMultiPathControl.h"
		"Controls/Test/TestMultiTouchControl.h"
		"Controls/Test/TestPolyControl.h"
		"Controls/Test/TestShadowGradientControl.h"
		"Controls/Test/TestSizeControl.h"
		"Controls/Test/TestSVGControl.h"
		"Controls/Test/TestTextControl.h"
		"Controls/Test/TestTextOrientationControl.h"
		"Controls/Test/TestTextSizeControl.h"
		"Drawing/IGraphicsAGG.cpp"
		"Drawing/IGraphicsAGG.h"
		"Drawing/IGraphicsAGG_src.cpp"
		"Drawing/IGraphicsAGG_src.h"
        "Drawing/IGraphicsAGG_src.mm"
		"Drawing/IGraphicsCairo.cpp"
		"Drawing/IGraphicsCairo.h"
		"Drawing/IGraphicsCanvas.cpp"
		"Drawing/IGraphicsCanvas.h"
		"Drawing/IGraphicsLice.cpp"
		"Drawing/IGraphicsLice.h"
		"Drawing/IGraphicsLice_src.cpp"
		"Drawing/IGraphicsLice_src.h"
        "Drawing/IGraphicsLice_src.mm"
		"Drawing/IGraphicsNanoVG.cpp"
		"Drawing/IGraphicsNanoVG.h"
        "Drawing/IGraphicsNanoVG_src.m"
		"Drawing/IGraphicsSkia.cpp"
		"Drawing/IGraphicsSkia.h"
		"Drawing/IGraphicsSkia_src.cpp"
		"Extras/IGraphicsFlexBox.cpp"
		"Extras/IGraphicsFlexBox.h"
		"Extras/IGraphicsImGui.cpp"
		"Extras/IGraphicsImGui.h"
        "Extras/IGraphicsImGui_src.mm"
		"IControl.cpp"
		"IControl.h"
		"IGraphics.cpp"
		"IGraphics.h"
		"IGraphics_include_in_plug_hdr.h"
		"IGraphics_include_in_plug_src.h"
		"IGraphics_select.h"
		"IGraphicsConstants.h"
		"IGraphicsEditorDelegate.cpp"
		"IGraphicsEditorDelegate.h"
		"IGraphicsLiveEdit.h"
		"IGraphicsPathBase.h"
		"IGraphicsPopupMenu.h"
		"IGraphicsPrivate.h"
		"IGraphicsStructs.h"
		"IGraphicsUtilities.h"
		"ISender.h"
		"Platforms/IGraphicsCoreText.h"
        "Platforms/IGraphicsCoreText.mm"
		"Platforms/IGraphicsIOS.h"
        "Platforms/IGraphicsIOS.mm"
        "Platforms/IGraphicsIOS_src.m"
		"Platforms/IGraphicsIOS_view.h"
        "Platforms/IGraphicsIOS_view.mm"
		"Platforms/IGraphicsLinux.cpp"
		"Platforms/IGraphicsLinux.h"
		"Platforms/IGraphicsMac.h"
        "Platforms/IGraphicsMac.mm"
		"Platforms/IGraphicsMac_view.h"
        "Platforms/IGraphicsMac_view.mm"
		"Platforms/IGraphicsWeb.cpp"
		"Platforms/IGraphicsWeb.h"
		"Platforms/IGraphicsWin.cpp"
		"Platforms/IGraphicsWin.h"
)
