cmake_minimum_required(VERSION 3.17)
include_guard(GLOBAL)

add_library(IPlug INTERFACE)

target_sources(IPlug
    INTERFACE
        "AAX/IPlugAAX.cpp"
        "AAX/IPlugAAX.h"
        "AAX/IPlugAAX_Describe.cpp"
        "AAX/IPlugAAX_Parameters.cpp"
        "AAX/IPlugAAX_Parameters.h"
        "AAX/IPlugAAX_TaperDelegate.h"
        "AAX/IPlugAAX_view_interface.h"
        "APP/IPlugAPP.cpp"
        "APP/IPlugAPP.h"
        "APP/IPlugAPP_dialog.cpp"
        "APP/IPlugAPP_host.cpp"
        "APP/IPlugAPP_host.h"
        "APP/IPlugAPP_main.cpp"
        "AUv2/dfx-au-utilities.c"
        "AUv2/dfx-au-utilities.h"
        "AUv2/IPlugAU.cpp"
        "AUv2/IPlugAU.h"
        "AUv2/IPlugAU.r"
        "AUv2/IPlugAU_ioconfig.h"
        "AUv2/IPlugAU_view_factory.mm"
        "AUv3/BufferedAudioBus.hpp"
        "AUv3/GenericUI.h"
        "AUv3/GenericUI.mm"
        "AUv3/iOSApp/AppDelegate.h"
        "AUv3/iOSApp/AppDelegate.m"
        "AUv3/iOSApp/AppViewController.h"
        "AUv3/iOSApp/AppViewController.mm"
        "AUv3/iOSApp/IPlugAUPlayer.h"
        "AUv3/iOSApp/IPlugAUPlayer.mm"
        "AUv3/iOSApp/main.m"
        "AUv3/IPlugAUAudioUnit.h"
        "AUv3/IPlugAUAudioUnit.mm"
        "AUv3/IPlugAUv3.h"
        "AUv3/IPlugAUv3.mm"
        "AUv3/IPlugAUv3Appex.m"
        "AUv3/IPlugAUViewController.h"
        "AUv3/IPlugAUViewController.mm"
        "Extras/ADSREnvelope.h"
        "Extras/Cocoa/IPlugCocoaEditorDelegate.h"
        "Extras/Cocoa/IPlugCocoaEditorDelegate.mm"
        "Extras/Cocoa/IPlugCocoaViewController.h"
        "Extras/Cocoa/IPlugCocoaViewController.mm"
        "Extras/Easing.h"
        "Extras/Faust/IPlugFaust.cpp"
        "Extras/Faust/IPlugFaust.h"
        "Extras/Faust/IPlugFaust_arch.cpp"
        "Extras/Faust/IPlugFaustGen.cpp"
        "Extras/Faust/IPlugFaustGen.h"
        "Extras/HIIR/FPUDownsampler2x.h"
        "Extras/HIIR/FPUStageProc.h"
        "Extras/HIIR/FPUUpsampler2x.h"
        "Extras/HIIR/license.txt"
        "Extras/HIIR/PolyphaseIIR2Designer.cpp"
        "Extras/HIIR/PolyphaseIIR2Designer.h"
        "Extras/HIIR/readme.txt"
        "Extras/LFO.h"
        "Extras/NChanDelay.h"
        "Extras/OSC/IPlugOSC.cpp"
        "Extras/OSC/IPlugOSC.h"
        "Extras/OSC/IPlugOSC_msg.cpp"
        "Extras/OSC/IPlugOSC_msg.h"
        "Extras/Oscillator.h"
        "Extras/Oscillator_table.h"
        "Extras/Oversampler.h"
        "Extras/README.md"
        "Extras/Smoothers.h"
        "Extras/SVF.h"
        "Extras/Synth/ControlRamp.h"
        "Extras/Synth/MidiSynth.cpp"
        "Extras/Synth/MidiSynth.h"
        "Extras/Synth/SynthVoice.h"
        "Extras/Synth/VoiceAllocator.cpp"
        "Extras/Synth/VoiceAllocator.h"
        "Extras/WebSocket/IWebsocketEditorDelegate.cpp"
        "Extras/WebSocket/IWebsocketEditorDelegate.h"
        "Extras/WebSocket/IWebsocketServer.cpp"
        "Extras/WebSocket/IWebsocketServer.h"
        "Extras/WebView/IPlugWebView.cpp"
        "Extras/WebView/IPlugWebView.h"
        "Extras/WebView/IPlugWebView.mm"
        "Extras/WebView/IPlugWebViewEditorDelegate.cpp"
        "Extras/WebView/IPlugWebViewEditorDelegate.h"
        "Extras/WebView/IPlugWebViewEditorDelegate.mm"
        "IPlug.cpp"
        "IPlug.h"
        "IPlug_include_in_plug_hdr.h"
        "IPlug_include_in_plug_src.h"
        "IPlugAPIBase.cpp"
        "IPlugAPIBase.h"
        "IPlugConstants.h"
        "IPlugDelegate_select.h"
        "IPlugEditorDelegate.h"
        "IPlugLogger.h"
        "IPlugMidi.h"
        "IPlugOBJCPrefix.pch"
        "IPlugParameter.cpp"
        "IPlugParameter.h"
        "IPlugPaths.cpp"
        "IPlugPaths.h"
        "IPlugPaths.mm"
        "IPlugPlatform.h"
        "IPlugPluginBase.cpp"
        "IPlugPluginBase.h"
        "IPlugProcessor.cpp"
        "IPlugProcessor.h"
        "IPlugQueue.h"
        "IPlugStructs.h"
        "IPlugSWELL.h"
        "IPlugTimer.cpp"
        "IPlugTimer.h"
        "IPlugUtilities.h"
        "IPlugVersion.h"
        "PAL/ExampleClass.h"
        "PAL/IOS/IOSPlatform.h"
        "PAL/Linux/LinuxPlatform.h"
        "PAL/Mac/MacPlatform.h"
        "PAL/Platform.h"
        "PAL/PlatformCompiler.h"
        "PAL/README.md"
        "PAL/WEB/WEBPlatform.h"
        "PAL/Windows/ExampleClass.cpp"
        "PAL/Windows/ExampleClass.h"
        "PAL/Windows/WindowsPlatform.h"
        "PAL/Windows/WindowsSDK.h"
        "ReaperExt/ReaperExt_include_in_plug_hdr.h"
        "ReaperExt/ReaperExt_include_in_plug_src.h"
        "ReaperExt/ReaperExtBase.cpp"
        "ReaperExt/ReaperExtBase.h"
        "VST2/IPlugReaperVST2.h"
        "VST2/IPlugVST2.cpp"
        "VST2/IPlugVST2.h"
        "VST3/IPlugVST3.cpp"
        "VST3/IPlugVST3.h"
        "VST3/IPlugVST3_Common.h"
        "VST3/IPlugVST3_Controller.cpp"
        "VST3/IPlugVST3_Controller.h"
        "VST3/IPlugVST3_ControllerBase.h"
        "VST3/IPlugVST3_Defs.h"
        "VST3/IPlugVST3_Parameter.h"
        "VST3/IPlugVST3_Processor.cpp"
        "VST3/IPlugVST3_Processor.h"
        "VST3/IPlugVST3_ProcessorBase.cpp"
        "VST3/IPlugVST3_ProcessorBase.h"
        "VST3/IPlugVST3_View.h"
        "WEB/IPlugWAM.cpp"
        "WEB/IPlugWAM.h"
        "WEB/IPlugWeb.cpp"
        "WEB/IPlugWeb.h"
        "WEB/Template/favicon.ico"
        "WEB/Template/index.html"
        "WEB/Template/scripts/IPlugWAM-awn.js"
        "WEB/Template/scripts/IPlugWAM-awp.js"
        "WEB/Template/scripts/websocket.js"
        "WEB/Template/styles/style.css"
)
