#  ==============================================================================
#
#  This file is part of the iPlug 2 library. Copyright (C) the iPlug 2 developers.
#
#  See LICENSE.txt for  more info.
#
#  ==============================================================================

# iPlug2 Test Projects
# Build all test projects for testing the iPlug2 framework

set(CMAKE_FOLDER "Tests")
add_subdirectory(IGraphicsTest)
add_subdirectory(IGraphicsStressTest)
add_subdirectory(MetaParamTest)
